# qa-generate-workflow

./: .env.example  .gitignore  PLAN.md  README.md  TASKS.md  environment.yml  pyproject.toml
backend/: .env.example  PLAN.md  TASKS.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/v1/: dependencies.py  routes.py
backend/app/domain/: __init__.py  models.py  qa_roster.py  responses.py
backend/app/repositories/: factory.py  supabase_repository.py  workflow_repository.py
backend/app/services/: agent_a_retry.py  agent_b_retry.py  gdd_parser.py  mock_agents.py  notion_sync.py  pipeline.py  review_queues.py  risk_events.py  validators.py
backend/app/services/agents/: __init__.py  contracts.py  factory.py  mock.py  openai.py
backend/app/services/notion/: __init__.py  factory.py  mock.py  notion.py  schema.py
backend/tests/: conftest.py  test_agent_a_retry.py  test_agents.py  test_api.py  test_config.py  test_notion.py  test_parser.py  test_pipeline.py  test_risk_events.py  test_supabase_schema.py  test_validators.py
docs/: architecture.md  backend-setup.md  fixtures.md
docs/contracts/: api-contract.md  pipeline-contract.md  storage-contract.md
docs/runbooks/: local-demo.md  supabase.md
frontend/: PLAN.md  TASKS.md  next.config.ts  package-lock.json  package.json
frontend/_design_fixtures/: agent-runs.json  coverage.json  demo_run.json  design-system.md  epics.json  features.json  review-queues_HIL-0.json  review-queues_HIL-1.json  review-queues_HIL-2.json  (+9 more)
supabase/: clear-data.sql  schema.sql
(+33 files in other folders)
