[project]
name = "qa-generate-workflow"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "python-multipart>=0.0.9",
  "python-docx>=1.1.2",
  "pypdf>=4.0.0",
  "supabase>=2.6.0",
  "httpx>=0.27.0"
]

[project.scripts]
app = "backend.app.main:app"
